[package]
name = "rose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
glow = "0.12.3"
imgui = "0.11.0"
imgui-glow-renderer = "0.11.0"
imgui-sdl2-support = "0.11.0"
log = "0.4.0"

[dependencies.sdl2]
version = "0.34.5"
default-features = false
features = ["static-link", "use-vcpkg", "gfx", "image"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-gfx","sdl2-image"]
git = "https://github.com/microsoft/vcpkg"
rev = "501db0f"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
